# vasm

./: .gitignore  README.md  cog.toml  pyproject.toml
.github/workflows/: python-ci.yml
examples/: Makefile  hello.s  sprintf.s
tests/: test_assembler.py  test_codegen.py  test_parser.py
tests/samples/: codegen_redefining_label_error.s  codegen_undefined_label_error.s  factorial.s  parser_error.s
vasm/: __init__.py  __main__.py  assembler.py  codegen.py  ir.py  linker.py  m4_wrapper.py  parser.py  source.py  tokens.py
vasm/data/: directives.m4
xivasm/: __init__.py  __main__.py  exceptions.py  linker.py  m4_wrapper.py  parser.py  resolver.py  source.py
xivasm/data/: directives.m4
