[project]
name = "xivasm"
version = "2.0.0"
description = "Assembler for stackvm-xonotic"
readme = "README.md"
authors = [{ name = "Jian" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
# Since parsy 2.1 supports python 3.8 and above.
requires-python = ">=3.8"
dependencies = ["parsy==2.1"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Software Development :: Assemblers",
]

[project.urls]
"Source Code" = "https://github.com/coolDudeRude/xivasm"
"Bug Tracker" = "https://github.com/coolDudeRude/xivasm/issues"

[project.scripts]
xivasm = "xivasm.__main__:main"

[tool.setuptools.package-data]
xivasm = ["data/*.m4"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
